# aimv2-large-patch14-224

./: .gitignore  README.md
aimv2-large-patch14-224/: .gitignore  README.md  get_coco_files.sh  image_search.py  main.py  prepare_features.py  pyproject.toml
server_for_similar_image_search/: .dockerignore  .gitignore  Dockerfile  README.md  config.toml  create_pt_file.py  handld_features.py  pyproject.toml  requirements.txt  searcher.py  server.py  test_local_container_deploy.sh
